fixed layout issue user tabel

--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -19,7 +19,7 @@
    table {
       width: 90%;
       margin-inline: auto;
-      height: 100%;
+      max-height: 100%;
       border-collapse: collapse;
       font-size: 1.2em;
 
@@ -33,12 +33,18 @@
             vertical-align: top;
             text-align: left;
             font-size: 1.4em;
+            th {
+               width: 33%;
+            }
          }
       }
 
       tbody {
          tr {
             border-bottom: solid 1px rgba($color: #000000, $alpha: 0.1);
+            td {
+               width: 33%;
+            }
          }
       }
    }
